k8s/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: chat-apps
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
